# Page_Analyzer

./: .build.sh.swp  .env  .env.swp  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: page_analyzer_ci.yml
page_analyzer/: .app.py.swo  .app.py.swp  __init__.py  app.py  db.py  html_check.py  normalize_url.py  validator.py
page_analyzer/templates/: .entering_and_address.html.swp  entering_and_address.html  header.html  home_page.html  index.html  layout.html  url.html  urls.html
page_analyzer/templates/components/: nav.html
page_analyzer/templates/error/: 404.html  500.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/urls/: url.html
