[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Solovtcov Stanislav <vandemar@bk.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
