[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Web application that analyzes specified pages for SEO suitability"
authors = ["Solovtcov Stanislav <vandemar@bk.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]
repository = "https://github.com/StanislavSol/python-project-83.git"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
flask = "^2.3.3"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.7"
validators = "^0.22.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
